--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,5 @@
       <a href = "http://railstutorial.org/">Ruby on RailsTUtoria</a>
       sample application
     </p>
+    
+    <%= link_to "Sign up now!", '#', :class => "signup_button round" %>
