--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,11 @@
 <footer>
   <nav class= "round">
     <ul>
-      <li><%= link_to "About", '#'%></li>
-      <li><%= link_to "Contact", '#'%></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
       <li><%= link_to "News", 'http://news.railstutorial.org'%></li>
       <li><%= link_to "Rails Tutorail", 'http://railstutorial.org'%></li>
 
     </ul>
+  </nav>
 </footer>
